--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/index.css">
     <meta name="author" content="Evan Sklarski">
-    <title>Some Basic "Tennis" Game</title>
+    <title>The Cannibal Arcade</title>
 
     <script src="scripts/static/ColorPaletts.js"></script>
     <script src="scripts/static/Drawing.js"></script>
