add SomeTennisGame to project config

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="scripts/classes/GameState.js"></script>
     <script src="scripts/classes/GameManager.js"></script>
     <script src="games/GoPongYourself.js"></script>
+    <script src="games/SomeTennisGame.js"></script>
     <script src="scripts/testScreens.js"></script>
     <script src="scripts/index.js"></script>
 </head>
