create a minimum working game example - create MinimumExample.js - Game default returning false instead of null - handle Game methods not being overriden

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="games/GoPongYourself.js"></script>
     <script src="games/SomeTennisGame.js"></script>
     <script src="games/BreakBricks.js"></script>
+    <script src="games/MinimumExample.js"></script>
     <script src="scripts/testScreens.js"></script>
     <script src="scripts/index.js"></script>
 </head>
