--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="scripts/static/Images.js"></script>
     <script src="scripts/classes/Game.js"></script>
     <script src="scripts/static/GameState.js"></script>
+    <script src="scripts/static/Ratio.js"></script>
     <script src="scripts/classes/GameManager.js"></script>
     <script src="games/GoPongYourself.js"></script>
     <script src="games/SomeTennisGame.js"></script>
